--- a/static/css/search.css
+++ b/static/css/search.css
@@ -4,8 +4,7 @@
     padding: 2rem;
 }
 
-
-.search-container {
+main .search-container {
     animation: slideUp 0.6s ease-out;
 }
 
@@ -52,8 +51,6 @@
     color: var(--text-color);
 }
 
-
-
 .result-logo.placeholder {
     background-color: var(--card-border);
     display: flex;
@@ -69,11 +66,11 @@
         flex-direction: column;
         padding: 0 1rem;
     }
-    
+
     .search-inputs {
         flex-direction: column;
     }
-    
+
     .grade-filter {
         width: 100%;
     }
